# Warden

./: .gitignore  CHANGELOG.md  README.md  conftest.py  demo.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release.yml  tests.yml
benchmarks/: bench.py
config/: policy.yaml
docs/: DETECTION_POSTURE.md  PERFORMANCE.md  THREAT_MODEL.md
integrations/vscode/: README.md  extension.js  package.json
packaging/: entry.py
proxy/: cli.py
proxy/adaptive/: __init__.py  behavior.py  policy.py  replay.py  trustgraph.py
proxy/audit/: log.py  telemetry.py
proxy/containment/: __init__.py  backends.py  ephemeral.py  procmon.py  quotas.py  sandbox.py
proxy/core/: decision.py  metrics.py  mission.py  request.py  risk.py  textnorm.py
proxy/guards/: canonicalize.py  egress.py  safe_exec.py
proxy/identity/: __init__.py  capabilities.py  memguard.py  rbac.py  sessions.py
proxy/inspect/: evaluate.py  inbound.py  presidio_backend.py  redactor.py  schema.py  threats.py
proxy/network/: __init__.py  addrguard.py  canary.py  dnspin.py  downloads.py  guard.py  httpguard.py  ratelimit.py  reputation.py
proxy/policy/: engine.py
tests/: fake_mcp_server.py  test_attacks.py  test_core.py  test_egress_and_textnorm.py  test_failclosed.py  test_fuzz_normalize.py  test_mission_and_metrics.py  test_performance.py  test_pinning.py  test_policy_paths.py  test_presidio.py  test_telemetry.py  test_transport.py  test_v11_hardening.py  test_v2_model_security.py  test_v3_network_security.py  test_v4_identity_trust.py  test_v5_containment.py  test_v6_adaptive_security.py  test_v7_platform.py
warden/: __init__.py  cli.py
(+58 files in other folders)
