[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "warden-security"
version = "7.0.0"
description = "Zero-trust security runtime for AI agents: policy-mediated tool calls, tamper-evident audit, network and identity guards, adaptive security."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Meca Dismukes", email = "meca@pixorainc.com" }]
keywords = ["ai-agents", "security", "zero-trust", "mcp", "llm", "policy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
# The runtime is deliberately stdlib + PyYAML. Everything else is opt-in.
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
pii = ["presidio-analyzer>=2.2"]          # v1.5.5 richer PII detection
sign = ["cryptography>=42"]               # v7 signed policy bundles
desktop = ["pywebview>=5"]                # v7 native dashboard window
dev = ["pytest>=8", "hypothesis>=6", "build>=1", "twine>=5"]

[project.scripts]
warden = "warden.cli:main"

[project.urls]
Homepage = "https://github.com/Mecapixel/warden"
Changelog = "https://github.com/Mecapixel/warden/blob/main/CHANGELOG.md"
Issues = "https://github.com/Mecapixel/warden/issues"

[tool.setuptools.packages.find]
include = ["warden*"]
exclude = ["tests*", "benchmarks*", "integrations*", "packaging*"]
